# kokkos-swe

./: .gitignore  CMakeLists.txt  README.md  kokkos_swe.sh  kokkos_swe_data.sh  kokkos_swe_h100.sh  shallow_water.cpp  shallow_water_cublas_spmv.cpp  shallow_water_fused.cpp  shallow_water_spmv.cpp  swe_export_to_binary.py
